# swiftsc-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
