[package]
name = "swiftsc-cli"
version = "1.0.2-beta"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Command-line interface for SwiftSC-Lang compiler"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-cli"

[[bin]]
name = "swiftsc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Dependencies from other repositories
swiftsc-frontend = { path = "../swiftsc-compiler/frontend" }
swiftsc-backend = { path = "../swiftsc-compiler/backend" }
swiftsc-runtime = { path = "../swiftsc-runtime" }

[dev-dependencies]
