[package]
name = "swiftsc-cli"
version = "1.0.3"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Command-line interface for SwiftSC-Lang compiler"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-cli"

[[bin]]
name = "swiftsc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Dependencies from crates.io
swiftsc-frontend = "1.0.3"
swiftsc-backend = "1.0.3"
swiftsc-runtime = "1.0.3"
swiftsc-analyzer = "1.0.3"

[dev-dependencies]
